--- a/public/styles.css
+++ b/public/styles.css
@@ -1,9 +1,73 @@
 * {
-    background-color: pink;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.welcome {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid #014a7f;
+    margin: 40px;
+}
+
+.logo {
+    height: 200px;
 }
 
 img {
-    height: 500px;
+    height: 400px;
     width: auto;
     object-fit: cover;
+}
+
+.registration-form {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+}
+
+input {
+    /* height: 25px; */
+    /* width: 30%; */
+    /* box-shadow: 0 8px 2px 0 #e3001b; */
+    /* border-radius: 8px; */
+    border: none;
+    margin: 10px 10px 5px;
+    padding: 6px 6px;
+    text-align: center;
+    border-bottom: 2px solid #e3001b;
+}
+
+input:focus {
+    background-color: rgba(240, 128, 128, 0.212);
+    outline: none;
+}
+
+.submit-button {
+    box-shadow: 0 8px 2px 0 #e3001b;
+    border-radius: 8px;
+    border: none;
+    margin: 10px 10px 5px;
+    padding: 6px 6px;
+    background-color: rgba(158, 156, 156, 0.123);
+    cursor: pointer;
+    outline: none;
+}
+
+.submit-button:hover {
+    background-color: lightcoral;
+    color: white;
+    transition: 0.5s;
+}
+.submit-button:active {
+    outline: none;
+    background-color: #e3001b;
+    box-shadow: inset 0.5px 0.5px 2px;
+}
+
+.error {
+    color: #e3001b;
+    font-style: italic;
+    text-align: center;
 }
