fragments of part 3

--- a/public/styles.css
+++ b/public/styles.css
@@ -71,3 +71,9 @@ input:focus {
     font-style: italic;
     text-align: center;
 }
+
+.redirect {
+    margin-top: 20px;
+    font-size: 14px;
+    display: inline;
+}
