--- a/public/styles.css
+++ b/public/styles.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid #014a7f;
+    /* border: 2px solid #014a7f; */
     margin: 40px;
 }
 
