--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,7 @@
 * {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    box-sizing: border-box;
 }
 
 .welcome {
@@ -11,14 +12,33 @@
     margin: 40px;
 }
 
-.logo {
-    height: 200px;
-}
-
 img {
     height: 400px;
     width: auto;
     object-fit: cover;
+}
+
+header {
+    height: 140px;
+    background-color: rgba(0, 0, 255, 0.447);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: white;
+}
+
+.logo {
+    height: 100px;
+    margin: 20px;
+    border: 2px solid white;
+}
+
+/* profile pic small */
+.small {
+    height: 100px;
+    cursor: pointer;
+    margin: 20px;
+    border: 2px solid white;
 }
 
 .registration-form {
@@ -77,3 +97,49 @@ input:focus {
     font-size: 14px;
     display: inline;
 }
+
+.uploader-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+
+    background-color: rgba(12, 12, 226, 0.295);
+    width: 50%;
+    height: 50%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition-property: background-color;
+    transition-duration: 1s;
+    box-shadow: 0 12px 7px 0 #e3001b;
+    border-radius: 8px;
+    border: none;
+    padding: 20px;
+}
+
+.closeX {
+    cursor: pointer;
+    float: right;
+}
+
+/* .ugly-input {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+} */
+
+/* label {
+    height: 50px;
+    width: 200px;
+    outline: 1px dotted #000;
+    outline: -webkit-focus-ring-color auto 5px;
+}
+
+label {
+    cursor: pointer;
+} */
