--- a/public/styles.css
+++ b/public/styles.css
@@ -4,6 +4,21 @@
     box-sizing: border-box;
 }
 
+body,
+html {
+    height: 100%;
+}
+/* /////////////////*/
+/* background image */
+/* /////////////////*/
+.bg {
+    background-image: url("./tiles.jpg");
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .welcome {
     display: flex;
     flex-direction: column;
@@ -32,19 +47,28 @@ header {
     margin: 20px;
     border: 2px solid white;
 }
+/* profile pic large */
+.large {
+    height: 300px;
+    cursor: pointer;
+    margin: 20px;
+    border: 6px solid rgba(0, 0, 255, 0.447);
+}
 
 /* profile pic small */
 .small {
     height: 100px;
+    width: 100px;
     cursor: pointer;
     margin: 20px;
     border: 2px solid white;
+    /* border-radius: 50%; */
 }
 
 .registration-form {
     display: flex;
     flex-direction: column;
-    width: 200px;
+    /* width: 200px; */
 }
 
 input {
@@ -65,7 +89,8 @@ input:focus {
 }
 
 .submit-button {
-    box-shadow: 0 8px 2px 0 #e3001b;
+    box-shadow: 2px 4px 2px 0 #e3001b;
+
     border-radius: 8px;
     border: none;
     margin: 10px 10px 5px;
@@ -83,7 +108,7 @@ input:focus {
 .submit-button:active {
     outline: none;
     background-color: #e3001b;
-    box-shadow: inset 0.5px 0.5px 2px;
+    box-shadow: inset 3px 4px 0.5px #60020d;
 }
 
 .error {
@@ -93,9 +118,10 @@ input:focus {
 }
 
 .redirect {
-    margin-top: 20px;
+    margin: 20px;
     font-size: 14px;
     display: inline;
+    text-align: center;
 }
 
 .uploader-container {
@@ -104,7 +130,7 @@ input:focus {
     align-items: center;
     justify-content: space-evenly;
 
-    background-color: rgba(12, 12, 226, 0.295);
+    background-color: rgb(255, 255, 255);
     width: 50%;
     height: 50%;
     position: fixed;
@@ -113,9 +139,9 @@ input:focus {
     transform: translate(-50%, -50%);
     transition-property: background-color;
     transition-duration: 1s;
-    box-shadow: 0 12px 7px 0 #e3001b;
+    box-shadow: 12px 12px 2px 1px #e3001aa8;
     border-radius: 8px;
-    border: none;
+    border: 1px solid #e3001b;
     padding: 20px;
 }
 
@@ -143,3 +169,49 @@ input:focus {
 label {
     cursor: pointer;
 } */
+
+.bio-container {
+    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: row;
+    background-color: rgba(255, 255, 255, 0);
+}
+
+.bio-frame {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+}
+
+/* last step of password change */
+.reset-final {
+    text-align: center;
+}
+
+textarea {
+    border: none;
+    margin: 10px 10px 5px;
+    padding: 6px 6px;
+    resize: none;
+    border-bottom: 1px dotted #e3001b;
+    overflow: auto;
+    /* box-shadow: 2px 4px 2px 0 #e3001b; */
+}
+
+textarea:focus {
+    background-color: rgba(240, 128, 128, 0.212);
+    outline: none;
+}
+
+.bio-buttons {
+    display: flex;
+    flex-direction: row;
+    /* width: 100%; */
+    justify-content: space-between;
+}
+
+.bio-buttons > button {
+    width: 35%;
+    /* align-self: flex-end; */
+    margin-top: 20px;
+}
