--- a/public/styles.css
+++ b/public/styles.css
@@ -404,3 +404,35 @@ html {
     background-repeat: no-repeat;
     background-size: cover;
 } */
+
+.chat-room {
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+}
+.chat-container {
+    /* margin-left: 50px; */
+    /* border: 1px #e3001b solid; */
+    border: 6px solid rgba(0, 0, 255, 0.447);
+    height: 350px;
+    width: 800px;
+    overflow-y: scroll;
+}
+
+.chat-textarea {
+    /* margin-left: 50px; */
+    /* border: 2px blue solid; */
+    width: 800px;
+}
+.message {
+    /* border: 2px blue solid; */
+    display: flex;
+}
+
+.name-msg-chat {
+    margin-left: 10px;
+}
+/* p{
+    text-decoration: underline;
+} */
