--- a/public/styles.css
+++ b/public/styles.css
@@ -139,6 +139,7 @@ header {
 /* profile pic large */
 .large {
     height: 300px;
+    /* width: 350px; */
     cursor: pointer;
     margin: 20px;
     border: 6px solid rgba(0, 0, 255, 0.447);
@@ -432,4 +433,18 @@ html {
     margin: 10px;
     margin-top: 5px;
     margin-bottom: 0;
+}
+
+.friends-profile {
+    /* border: 2px blue solid;
+    height: 400px;
+    width: 300px; */
+}
+
+.buddie-results-selection {
+    display: flex;
+    /* flex-direction: column; */
+    /* align-items: center; */
+    margin-left: 10px;
+    margin-left: 10px;
 }
